# RTx-Shredder

./: Changes  MANIFEST  MANIFEST.SKIP  META.yml  Makefile.PL  README  Todo  config.status  configure  configure.ac
autom4te.cache/: output.0  traces.0
html/Admin/Tools/Shredder/: index.html
html/Admin/Tools/Shredder/Elements/: PluginHelp  SelectObjects
html/Callbacks/RTx-Shredder/Elements/Header/: Head
inc/Module/: Install.pm
inc/Module/Install/: Base.pm  Build.pm  Can.pm  Fetch.pm  Makefile.pm  Metadata.pm  RTx.pm  Win32.pm  WriteAll.pm
lib/RTx/: Shredder.pm  Shredder.pm.in
lib/RTx/Shredder/: ACE.pm  Attachment.pm  CachedGroupMember.pm  Constants.pm  CustomField.pm  CustomFieldValue.pm  Dependencies.pm  Dependency.pm  Exceptions.pm  Group.pm  GroupMember.pm  Link.pm  ObjectCustomFieldValue.pm  POD.pm  Plugin.pm  Principal.pm  Queue.pm  Record.pm  Scrip.pm  ScripAction.pm  ScripCondition.pm  Template.pm  Ticket.pm  TicketCustomFieldValue.pm  Transaction.pm  User.pm
lib/RTx/Shredder/Plugin/: Attachments.pm  Base.pm  Objects.pm  Tickets.pm  Users.pm
patches/: search_deleted_on_explicit_requests.patch
sbin/: rtx-shredder  rtx-shredder.in  rtx-validator  rtx-validator.in
t/: 001_load.t  00load.t  00skeleton.t  01basics.t  01ticket.t  01use.t  02group_member.t  02user.t  03plugin_users.t  utils.pl
